<resources>
    <!--  Naming convention: {where}_{description}  -->
    <string name="app_name">SPassion</string>

    <!--  Home Fragment  -->
    <string name="home_ats">Key in CCA ATS Code</string>
    <string name="home_btn_submit">Submit</string>
    <string name="home_btn_ocr">OCR</string>
    <string name="home_news">News and Updates</string>
    <string name="home_carousel_title_1">Covid-19 Advisory</string>
    <string name="home_carousel_content_1">Please follow the examples posted on the photos above</string>
    <string name="home_carousel_title_2">Support SPassion!</string>
    <string name="home_carousel_content_2">Visit our shop in profile to find out more!</string>
    <string name="home_heading_cca">This week\'s CCA highlight</string>
    <string name="home_highlight_title">SP Mixed Martial Arts</string>
    <string name="home_highlight_date">Posted on 23/11/2020</string>
    <string name="home_highlight_description">Mixed Martial Arts (MMA) takes the best from each martial arts form and synergies it into a unique sport...</string>

    <!--  Sign Up Fragment  -->
    <string name="sign_up_label_1">Selected CCA</string>
    <string name="sign_up_label_2_1">Admin Number</string>
    <string name="sign_up_label_2_2">(without p)</string>
    <string name="sign_up_label_3">School Email</string>
    <string name="sign_up_label_4">Full Name</string>
    <string name="sign_up_label_5">Contact Number</string>
    <string name="sign_up_value_1">2491883</string>
    <string name="sign_up_value_2">Sharlene@ichat.sp.edu.sg</string>
    <string name="sign_up_value_3">Sharlene Tan Si Qi</string>
    <string name="sign_up_value_4">95588101</string>
    <string name="sign_up_btn_sign_up">Sign Up</string>
    <string name="sign_up_success">Your application has been sent to the cca Excos! Please check your email for further updates!</string>

    <!--  Profile Fragment  -->
    <string name="profile_heading_1">Profile</string>
    <string name="profile_heading_2">CCA Services</string>
    <string name="profile_heading_3">Account Options</string>
    <string name="profile_heading_4">Hello!</string>
    <string name="profile_body_1">CCA Status (Coming soon)</string>
    <string name="profile_body_2">CCA Attendance History (Coming soon)</string>
    <string name="profile_body_3">CCA Withdrawal (Coming soon)</string>
    <string name="profile_body_4">Campus Map</string>
    <string name="profile_body_5">Account Settings (Coming soon)</string>
    <string name="profile_body_6">Contact Developer (Coming soon)</string>
    <string name="profile_body_7">Visit Shop</string>
    <string name="profile_body_8">Log out</string>

    <!--  Shop Activity  -->
    <string name="shop_heading_1">Shop</string>
    <string name="shop_body_1">S$19.90</string>
    <string name="shop_body_2">Buy an SP shirt to support SPassion</string>
    <string name="shop_btn_1">Purchase</string>
    <string name="shop_btn_2">Back to Home</string>

    <!--  Checkout Activity  -->
    <string name="checkout_heading_1">Checkout</string>
    <string name="checkout_body_1">You are paying S$19.90 for</string>
    <string name='checkout_body_2'>SPassion Shirt</string>

    <!--  Checkout Success Activity  -->
    <string name="checkout_success_btn_back">Back to Home!</string>
    <string name="checkout_success_body_1">Please collect your shirt at T2148, Project INC room ^_^</string>
</resources>