<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button4"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="656dp"
        android:backgroundTint="@color/secondary"
        android:text="@string/sign_up_btn_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="136dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_spassion_color" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="343dp"
        android:layout_height="47dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="172dp"
        android:spinnerMode="dropdown"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="248dp"
        android:text="@string/sign_up_label_2_1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginTop="248dp"
        android:text="@string/sign_up_label_2_2"
        android:textColor="#8A8A8A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="144dp"
        android:text="@string/sign_up_label_1"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="352dp"
        android:text="@string/sign_up_label_3"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="556dp"
        android:text="@string/sign_up_label_5"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="452dp"
        android:text="@string/sign_up_label_4"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="380dp"
        android:background="#E8E8E8"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/sign_up_value_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="484dp"
        android:background="#E8E8E8"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/sign_up_value_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="584dp"
        android:background="#E8E8E8"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/sign_up_value_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="334dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="284dp"
        android:background="#E8E8E8"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:text="@string/sign_up_value_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>